--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,12 @@ services:
       - ./.data/db:/data/db
     ports:
       - 27017:27017
+  mmock:
+    image: jordimartin/mmock:v3.0.3
+    container_name: "mmock"
+    restart: always
+    ports:
+      - 8082:8082
+      - 8083:8083
+    volumes:
+       - ./mmock-config:/config
