--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+server.port=8080
+
 #MongoDB configuration
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=starter
+
+server.matrix.url=http://0.0.0.0:8083/
