--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
       - ./.data/db:/data/db
     ports:
       - 27017:27017
+  redis:
+    image: redis:alpine
+    ports:
+      - 6379:6379
   mmock:
     image: jordimartin/mmock:v3.0.3
     container_name: "mmock"
