--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,8 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=starter
 
+#redis configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+
 server.matrix.url=http://0.0.0.0:8083/
