--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.data.mongodb.database=starter
 spring.redis.host=localhost
 spring.redis.port=6379
 
-server.matrix.url=http://0.0.0.0:8083/
+server.matrix.url=http://localhost:8083/
