change to postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 server.port=8080
 
-#MongoDB configuration
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=starter
+#PostgreSQL configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/matrix
+spring.datasource.username=matrix
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.show_sql=false
+
+#Remove for production
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #redis configuration
 spring.redis.host=localhost
