--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
 version: '3.5'
 
 services:
-  mongodb:
-    image: mongo:latest
-    container_name: "mongodb"
-    environment:
-      - MONGO_DATA_DIR=./.data/db
-      - MONGO_LOG_DIR=/dev/null
-      - MONGODB_USER="user"
-      - MONGODB_PASS="1234"
+  postgres:
+    image: postgres:9.6-alpine
+    container_name: "postgres"
+    env_file:
+      - local.env
     volumes:
-      - ./.data/db:/data/db
+      - ./postgres_data:/var/lib/postgresql/data
     ports:
-      - 27017:27017
+      - 5432:5432
   redis:
     image: redis:alpine
     ports:
