- remove redis while fix test - add test to reach 80% coverage - set jacoco check to bundle instad of package

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -8,3 +8,5 @@ spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
 logging.level.org.hibernate.type=WARN
+
+server.matrix.url=http://localhost:8089/
