add more realistic case

--- a/mmock-config/get_matrix.yaml
+++ b/mmock-config/get_matrix.yaml
@@ -1,6 +1,6 @@
 request:
   method: GET
-  path: "/identitymatrix/:id"
+  path: "/identitymatrix/:id/token/:id"
 response:
   statusCode: 200
   headers:
@@ -8,7 +8,7 @@ response:
     - application/json
   body: '{
   "firstName": "{{fake.FirstName}}",
-  "LastName": "{{fake.LastName}}",
+  "lastName": "{{fake.LastName}}",
   "phone": "{{fake.Phone}}",
   "nick": "{{fake.UserName}}",
   "age": "{{fake.DigitsN(2)}}"
